src/objects/Metric.object
<CustomObject>
    <fields>
        <fullName>Current_Value1__c</fullName>
        <formula>CurrentValue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordering__c</fullName>
        <label>Ordering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.	CCM Total Service Level</fullName>
                </value>
                <value>
                    <fullName>2.	CCM Calls Abandoned</fullName>
                </value>
                <value>
                    <fullName>3.	CCM 121’s Held</fullName>
                </value>
                <value>
                    <fullName>4. CCM Total CSI</fullName>
                </value>
                <value>
                    <fullName>5. CCM Total Upheld Complaints</fullName>
                </value>
                <value>
                    <fullName>6.	CCM LTS Opps</fullName>
                </value>
                <value>
                    <fullName>7.	CCM LTS Sales</fullName>
                </value>
                <value>
                    <fullName>8.	CCM STS Opps</fullName>
                </value>
                <value>
                    <fullName>9.	CCM STS Sales</fullName>
                </value>
                <value>
                    <fullName>10.	CCM Total Liabilities Opps</fullName>
                </value>
                <value>
                    <fullName>11.	CCM Total Liabilities Sales</fullName>
                </value>
                <value>
                    <fullName>12.	CCM Asset Opps</fullName>
                </value>
                <value>
                    <fullName>13.	CCM Asset AIP</fullName>
                </value>
                <value>
                    <fullName>14.	CCM IFA Opps</fullName>
                </value>
                <value>
                    <fullName>15.	CCM Total LTS Sales Top 10</fullName>
                </value>
                <value>
                    <fullName>16.	OB TL Call Observations Held</fullName>
                </value>
                <value>
                    <fullName>17.	OB TL 121’s Held</fullName>
                </value>
                <value>
                    <fullName>18. OB TL 121&apos;s Attended</fullName>
                </value>
                <value>
                    <fullName>19. OB TL Team CSI</fullName>
                </value>
                <value>
                    <fullName>20.	OB TL Total Service Level</fullName>
                </value>
                <value>
                    <fullName>21.	OB TL Team Upheld Complaints</fullName>
                </value>
                <value>
                    <fullName>22.	OB TL Online Sales Enquiries</fullName>
                </value>
                <value>
                    <fullName>23.	OB TL Coupons Logged</fullName>
                </value>
                <value>
                    <fullName>24.	OB TL Account Appointments</fullName>
                </value>
                <value>
                    <fullName>25.	OB TL Accounts Opened</fullName>
                </value>
                <value>
                    <fullName>26.	OB TL Referred Deferred Callbacks</fullName>
                </value>
                <value>
                    <fullName>27.	OB TL Team LTS Sales</fullName>
                </value>
                <value>
                    <fullName>28.	OB TL Team STS Sales</fullName>
                </value>
                <value>
                    <fullName>29.	OB TL Team Total Liabilities Sales</fullName>
                </value>
                <value>
                    <fullName>30.	OB TL Team Asset Opps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrigMetricId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>OrigMetricId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>TEXT(Progress) &amp; &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <formula>TargetValue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Target__c</fullName>
        <description>This is to calculate the current % to Target for Metrics</description>
        <formula>CurrentValue  /  TargetValue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% To Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>eGoalId__c</fullName>
        <description>Unique Id Field used to reference different records across Work.com Objects</description>
        <externalId>true</externalId>
        <label>eGoalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eParentId__c</fullName>
        <description>Unique Id Field used to reference different records across Work.com Object</description>
        <externalId>true</externalId>
        <label>eParentId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tes__c</fullName>
        <label>tes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Q3_Target_reports</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Progress</columns>
        <columns>Status</columns>
        <columns>DueDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>altaf</value>
        </filters>
        <label>Q3 Target reports</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Completion</fullName>
        <active>true</active>
        <description>Measure achievement based on whether or not the metric is finished. Ideal for tracking milestones, or when you don&apos;t have metrics based on hard numbers. For example: Become Salesforce Certified.</description>
        <label>Completion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress</fullName>
        <active>true</active>
        <description>Measure achievement based on how much is finished compared to a targeted value. Ideal for tracking hard numbers and percentages. For example: Convert 50 Leads or Achieve 100% Customer Satisfaction.</description>
        <label>Progress</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>